# robintheclaw

./: .env.example  .gitignore  .renderctl.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  HANDOVER-CLAUDE-LIGHTER.md  LICENSE  MAINTAINERS.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  render.yaml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
analysis/: README.md  pyproject.toml
analysis/src/robin_research/: __init__.py  artifact.py  baseline.py  cointegration.py  regime.py  risk.py  validation.py
analysis/tests/: conftest.py  test_pipeline.py
app/: Cargo.toml  README.md
app/migrations/: 0001_product.sql  0002_agents.sql  0003_mainnet_agents.sql  0004_live_agent_hardening.sql  0005_command_dispatch.sql  0006_robinhood_provisioning.sql  0007_account_registration.sql  0008_robinhood_authorization_proof.sql  0009_repin_strategy_manifest.sql  0010_repin_private_strategy_policy.sql  0011_execution_account_generations.sql
app/src/: account_registration.rs  auth.rs  command_dispatcher.rs  config.rs  event_bus.rs  lib.rs  lighter_provisioner.rs  main.rs  metrics.rs  orchestrator.rs  privy.rs  product.rs  product_indexer.rs  product_store.rs  robinhood_provisioner.rs  service_auth.rs  state.rs  store.rs  ws.rs
app/src/api/: basis.rs  control.rs  error.rs  evm.rs  health.rs  internal.rs  mod.rs  product.rs
app/src/evm/: abi.rs  indexer.rs  mod.rs  rpc.rs
app/tests/: postgres.rs
audits/: README.md  mainnet-live-internal-p0-p1.md  scope-v1.md
config/: addresses.json  engineering-canary-evidence.json  mainnet-live-policy.json  render-external-env-groups.example.json  validate-live-policy.mjs  validate-live-policy.test.mjs  validate.mjs
contracts/: README.md  foundry.toml
coordinator/: Cargo.toml  README.md
coordinator/migrations/: 0001_execution.sql  0002_execution_actions.sql  0003_venue_event_binding.sql  0004_market_authority.sql  0005_exit_authority.sql  0006_multi_account_execution.sql  0007_account_commands.sql  0008_account_registration.sql  0009_intent_idempotency.sql  0010_exit_dispatch.sql  0011_operator_restrictions.sql  0012_internal_canary_promotion.sql  0013_derived_canary_readiness.sql  0014_open_episode_resolution.sql  0015_exit_execution_policy.sql  0016_enable_basis_aapl_canary.sql  0017_refresh_basis_aapl_canary.sql  0018_repin_private_strategy_policy.sql  0019_robinhood_snapshot_source_blocks.sql  0020_release_blocked_exit_quotes.sql  0021_require_runtime_readiness.sql
coordinator/src/: api.rs  config.rs  lib.rs  main.rs  signer_client.rs  store.rs  worker.rs
coordinator/tests/: fail_closed.rs  postgres.rs  promotion.sql
deployments/: mainnet.json  testnet-proof.json  ux-testnet.json
docs/: architecture.md  control-plane-operations.md  data-plane-archive.md  database-authority.md  developer-guide.md  execution-control-plane.md  index.md  infrastructure-readiness.md  mainnet-deployment.md  mainnet-operations-runbook.md  operations.md  paper-trading-operations.md  production-audit-full-system.md  production-audit-mainnet-live-execution.md  production-audit-mainnet-readiness.md  render-mainnet-bootstrap.md  research-methodology.md  research-runtime.md  security-model.md  testnet-proof.md  user-experience.md  ux-testnet.md  venue-gates.md  venue-lighter.md
engine/: Cargo.toml  README.md
engine/fixtures/: plan-input.json
engine/src/: basis.rs  lib.rs  neutral.rs  portfolio.rs  risk.rs  sizing.rs
execution/: Cargo.toml  README.md
execution/src/: funding.rs  intent.rs  lib.rs  saga.rs  signer.rs
liveexec/: README.md  go.mod
publisher/: .dockerignore  Dockerfile  README.md  account_source.go  account_source_test.go  auth.go  (+19 more)
research/: Cargo.toml  README.md
research/src/: artifact.rs  gates.rs  lib.rs  strategy.rs  walk_forward.rs
runtime/: Cargo.toml
runtime/config/: mainnet-paper.json
runtime/exit-quote-publisher/: client.go  config.go  config_test.go  go.mod  go.sum  service.go  service_test.go  store.go  store_test.go  types.go
runtime/exit-quote-publisher/cmd/exit-quote-publisher/: main.go
runtime/fixtures/lighter/: error.json  height.json  market_metadata.json  market_stats.json  order_book_delta.json  order_book_gap.json  order_book_malformed.json  order_book_snapshot.json  subscribed_ack.json  subscribed_ack_malformed.json  ticker.json  trade.json
runtime/fixtures/paper/: aapl_ticker.json
runtime/live-control/: go.mod  main.go  main_test.go
runtime/live-evaluation/: README.md  config.go  config_test.go  go.mod  market_bootstrap.go  market_bootstrap_test.go  service.go  service_test.go  sources.go  store.go  store_test.go  strategy_policy.go  types.go  types_test.go
runtime/live-evaluation/cmd/live-evaluation/: main.go
runtime/live-evaluation/migrations/: 0001_live_evaluation.sql  0002_market_config_bootstrap.sql
runtime/live-scheduler/: README.md  client.go  client_test.go  config.go  config_test.go  go.mod  pg_store.go  scheduler.go  scheduler_test.go  types.go
runtime/live-scheduler/cmd/live-scheduler/: main.go
runtime/live-scheduler/migrations/: 0001_live_scheduler.sql  0002_natural_strategy_exit.sql  0003_repin_strategy_manifest.sql  0004_repin_private_strategy_policy.sql
runtime/migrations/: 0001_capture.sql  0002_durable_archive.sql  0003_paper_agent.sql  0004_agent_fanout.sql  0005_secure_archive_partition_function.sql
runtime/sequencer-publisher/: README.md  chain.go  chain_test.go  config.go  dependencies.go  go.mod  go.sum  journal.go  metrics.go  service.go  service_test.go
runtime/sequencer-publisher/aaplrelay/: README.md  chain.go  chain_test.go  config.go  journal.go  metrics.go  service.go
runtime/sequencer-publisher/cmd/aapl-relay/: main.go
runtime/sequencer-publisher/cmd/sequencer-publisher/: main.go
runtime/sequencer-publisher/migrations/: 0001_sequencer_journal.sql  0002_aapl_relay_journal.sql  0003_publisher_journal_isolation.sql
runtime/src/: agents.rs  archive.rs  chain.rs  lib.rs  lighter.rs  paper.rs  storage.rs
runtime/tests/: agent_fanout.rs  lighter_feed.rs  paper_agent.rs
(+326 files in other folders)
