[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Fail-closed paired-execution coordinator"

[dependencies]
axum = "0.8"
execution = { path = "../execution" }
research = { path = "../research" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
