[package]
name = "engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Decision engine for delta-neutral basis trades: basis detection, Kelly sizing, risk limits, and neutral order planning."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
