[package]
name = "execution"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Typed, deterministic execution intents and paired-order lifecycle"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[bin]]
name = "funding-plan"
path = "src/bin/funding_plan.rs"

[[bin]]
name = "validate-intent"
path = "src/bin/validate_intent.rs"
