[package]
name = "research"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Frozen research artifacts and executable strategy-promotion gates"

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[[bin]]
name = "promotion-gate"
path = "src/bin/promotion_gate.rs"

[[bin]]
name = "strategy-manifest-gate"
path = "src/bin/strategy_manifest_gate.rs"
