[package]
name = "robin-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Private event capture and shadow execution runtime for Robin the Claw."

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hex = "0.4"
object_store = { version = "0.14", default-features = false, features = ["aws-base", "reqwest", "ring"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
zstd = "0.13"

[dev-dependencies]
pretty_assertions = "1"
